fixes #1994 - ie7 layout problem with groups global nav dropdown. also fixes ie7 global nav me dropdown problem

--- a/app/stylesheets/ui_base/_masthead_global-nav.sass
+++ b/app/stylesheets/ui_base/_masthead_global-nav.sass
@@ -2,7 +2,7 @@
 // masthead with logout
 //
 #masthead
-  +clearfix 
+  +clearfix
   height: 50px
   background= !masthead_background
   #masthead-container
@@ -47,7 +47,7 @@
             position: relative
             height: 21px
             margin: -2px -1px 0 0
-            
+
         div
           display: inline
           position: relative
@@ -69,14 +69,14 @@ nav.page
   background= !global_nav_bg
   overflow: visible
   #global-nav-container
-    +container    
+    +container
     overflow: visible
     #global-nav
       +columns(14)
       +full
       width: 764px
       overflow: visible
-//     
+//
 // list-items from global nav
 //
 
@@ -85,7 +85,7 @@ nav.page
   margin: 0
   position: relative
 
-#menu  
+#menu
   +clearfix
   float: left
   overflow: visible
@@ -97,19 +97,19 @@ nav.page
       +hover-link
       color= !blue
       font-size: 12px
-      margin: 0 26px 0 0  
+      margin: 0 26px 0 0
   li.current
     a
       color: #382526
       font-weight: bold
-              
+
 #menu .menu_items
   li.small_icon
     float: left
     background-repeat: no-repeat
     background-position: 0 50%
     padding-left: 20px
-    min-height: 16px  
+    min-height: 16px
     a
       color: !warm_grey_text
       font-weight: normal
@@ -130,7 +130,7 @@ nav.page
   a
     +blue-link
     margin-right: 5px
-    margin-left: 5px      
+    margin-left: 5px
     &.active
       font-weight: bold
 // sub menu items
@@ -156,7 +156,9 @@ nav.page
     position: static
   li
     float: none
-  a 
+    a
+      overflow: hidden
+  a
     border: 0px none transparent
     color= !link_color
 
@@ -181,6 +183,9 @@ nav.page
   div.rightcol
     width: 17em
     margin-left: 18em
+
+.menu_items.twocols
+  width: 35em
 
 #menu #menu_me
   div.leftcol
@@ -210,6 +215,7 @@ ul.menu_me_left
     padding-top: 4px
     padding-bottom: 4px
   li
+    width: 9em
     &.active, &:hover
     &.small_icon
       padding-left: 19px
